# SSSnake

./: .gitignore  CMakeLists.txt  README.md  SSSnake.spec  api_server.py  build.sh  create_icon.py  debug_logger.py  install_sssnake.sh  main.py  main.py.bak  requirements.txt  roblox_injector.py  run_sssnake.command  script_obfuscator.py  secure_executor.cpp  setup_sssnake.sh  test_injection.py  theme_preference.txt
SSSnake.app/Contents/: Info.plist
SSSnake.app/Contents/MacOS/: SSSnake
SSSnake.app/Contents/Resources/: AppIcon.icns  icons.py  main.py
lib/: Makefile  macsploit_injector.py  roblox_injector.cpp  roblox_injector.h  roblox_injector.py  rustrogen_injector.py
src/: injector.cpp  injector.h  memory.cpp  memory.h  roblox_api.cpp  roblox_api.h
